--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,4 @@ djangorestframework-simplejwt==5.3.1
 django-cors-headers==4.3.1
 channels==4.0.0
 channels-redis==4.2.0
-Pillow==10.2.0
-
+Pillow==10.2.0 --no-binary :all:
