--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,16 @@ Django==5.1.5
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 django-cors-headers==4.3.1
+
+
 channels==4.0.0
 channels-redis==4.2.0
-Pillow==10.1.0
+
+
+Pillow==10.0.1
+
+
+gunicorn==22.0.0
+
+
+redis==5.0.1
