--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ djangorestframework-simplejwt==5.3.1
 django-cors-headers==4.3.1
 channels==4.0.0
 channels-redis==4.2.0
-cloudinary>=2.0.0
+cloudinary==1.44.1
 Pillow==11.0.0
 uvicorn==0.25.0
 daphne==4.0.0
